Added topcenter region. Added option to avoid adding icons. Fixed styling.

--- a/leaflet_search.libraries.yml
+++ b/leaflet_search.libraries.yml
@@ -17,5 +17,8 @@ wrapper:
   version: VERSION
   js:
     assets/script.js: {}
+  css:
+    component:
+      assets/leaflet-search.css: {}
   dependencies:
     - leaflet_search/geocoder-control
