--- a/leaflet_search.libraries.yml
+++ b/leaflet_search.libraries.yml
@@ -1,9 +1,9 @@
 geocoder-control:
   remote: https://github.com/perliedman/leaflet-control-geocoder
-  version: release-v1.0.0
+  version: 1.1.0
   license:
-    name: Unknown
-    url: https://github.com/perliedman/leaflet-control-geocoder/blob/release-v1.0.0/LICENSE
+    name: BSD-2-Clause
+    url: https://github.com/perliedman/leaflet-control-geocoder/blob/1.1.0/LICENSE
     gpl-compatible: true
   js:
     /libraries/leaflet-control-geocoder/Control.Geocoder.js: {}
